New build files with service worker changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-<link rel="stylesheet" href="styles.7d6ae773ea1f77dc032e.css"></head>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.cd2a708160b8490e3a59.css"></head>
 <body>
   <script>
     (function () {
@@ -25,5 +27,6 @@
     })();
   </script>
   <root></root>
-<script type="text/javascript" src="runtime.b3489f414accc62e43bd.js"></script><script type="text/javascript" src="es2015-polyfills.4a4cfea0ce682043f4e9.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="scripts.bf8f92e2e60dbee00511.js"></script><script type="text/javascript" src="main.ab40373e0443749de9ed.js"></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script type="text/javascript" src="runtime.6d57e4070a52c8b09d36.js"></script><script type="text/javascript" src="es2015-polyfills.4a4cfea0ce682043f4e9.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="scripts.bf8f92e2e60dbee00511.js"></script><script type="text/javascript" src="main.a036a0327f4c9174d23c.js"></script></body>
 </html>
