--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Web and UI Developer">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.ad178b4b73c09b79367e.css"></head>
+</head>
 <body>
   <script>
     (function () {
@@ -28,5 +28,5 @@
   </script>
   <root></root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.f10365387a7b153c0a84.js"></script><script type="text/javascript" src="es2015-polyfills.4a4cfea0ce682043f4e9.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="scripts.bf8f92e2e60dbee00511.js"></script><script type="text/javascript" src="main.b8ddbf37df56e93a3cc7.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
