--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.022398fd707e2cf8caf8.css"></head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.c1ff6fa1150122660801.css"></head>
 <body>
   <script>
     (function () {
@@ -29,5 +31,5 @@
   </script>
   <root></root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.3eb5ec718d80184f919f.js"></script><script type="text/javascript" src="es2015-polyfills.4a4cfea0ce682043f4e9.js" nomodule></script><script type="text/javascript" src="polyfills.407a467dedb63cfdd103.js"></script><script type="text/javascript" src="scripts.bf8f92e2e60dbee00511.js"></script><script type="text/javascript" src="main.0195596b3dac94bc04db.js"></script></body>
+<script type="text/javascript" src="runtime.77a4616ab28660c83436.js"></script><script type="text/javascript" src="es2015-polyfills.cf5c575b6ffb3f6bdfa6.js" nomodule></script><script type="text/javascript" src="polyfills.ca948757f51b36d0d532.js"></script><script type="text/javascript" src="scripts.bf8f92e2e60dbee00511.js"></script><script type="text/javascript" src="main.e39ed00a9a594d755f28.js"></script></body>
 </html>
