New Build files

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-T93GLZH');</script>
   <!-- End Google Tag Manager -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#1976d2">
   <!-- <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet"> -->
-<link rel="stylesheet" href="styles.c16f525eeef6a6089398.css"></head>
+</head>
 <body>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T93GLZH"
@@ -42,5 +42,5 @@
   <root></root>
   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.f026b37ab148db33ffe5.js"></script><script type="text/javascript" src="es2015-polyfills.cf5c575b6ffb3f6bdfa6.js" nomodule></script><script type="text/javascript" src="polyfills.ca948757f51b36d0d532.js"></script><script type="text/javascript" src="scripts.b29db525ee7768b5ac48.js"></script><script type="text/javascript" src="main.72f5715fa629e53c507e.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
